fixed overflow and input requirment

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,6 +117,7 @@ span + input {
   margin-left: 20px;
   border-radius: 20px;
   box-shadow: 0 3px 10px rgb(0 0 0 / 0.7);
+  overflow: scroll;
 }
 
 .kanbantitle {
